KSENROLL-14544: Updated showGrid logic to map to new cart TBA scheduling data. Added toggles and fixed layout issues when viewing schedule in mobile w/ only cart items.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@74976 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/responsive.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/responsive.less
@@ -60,7 +60,7 @@
                 display: block;
             }
         }
-        .kscr-Responsive-schedule {
+        .kscr-Responsive-scheduleTab {
             display: none;
             &--selected {
                 display: block;
@@ -68,6 +68,10 @@
         }
         .kscr-Card {
             margin-top: 0.5rem;
+        }
+        .kscr-Card,
+        .kscr-Splash { // Clear out the float from the toggles after the heading when viewing the list
+            clear: both;
         }
     }
     .kscr-Responsive-searchFormWrapper {
